tests/bad/func_invalid_return.ae
/// fail: Could not find type with this name

def foo(x: i32): Foo { }